<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.WarningPage">

    <ImageView
        android:id="@+id/gt"
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:layout_marginVertical="25dp"
        app:srcCompat="@drawable/gtvertical_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/peachtree"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/gt_icon" />

    <ImageView
        android:id="@+id/peachtree"
        android:layout_width="80dp"
        android:layout_height="108dp"
        android:layout_marginVertical="25dp"
        android:contentDescription="@string/peachtree_icon"
        app:layout_constraintBottom_toTopOf="@+id/pushNot"
        app:layout_constraintLeft_toRightOf="@id/gt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/some_id" />

    <TextView
        android:id="@+id/pushNot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/receive_notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gt" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/pushNot"
        android:text="@string/notification_warning"
        android:textSize="16sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/black"
        android:id="@+id/pushNotText"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pushNotText"
        android:layout_marginTop="30dp"
        android:text="@string/enable_location"
        android:textSize="20sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/black"
        android:id="@+id/locationShare"/>

    <TextView
        android:id="@+id/locationShareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/this_app_collects_location_services_to_understand_the_congestion_distribution_by_enabling_the_location_you_are_providing_access_to_georgia_tech_researchers_to_use_the_data_for_future_studies_you_can_opt_out_of_the_study_at_any_time_the_data_is_collected_through_google_cloud_services_and_will_be_de_identified_in_the_future"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationShare" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/accept_and_continue"
        app:layout_constraintBottom_toBottomOf="@id/declineButton"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationShareText"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/do_not_accept"
        android:textColor="@color/black"
        android:backgroundTint="@color/quantum_grey500"
        app:layout_constraintTop_toBottomOf="@id/acceptButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:id = "@+id/declineButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>